# Model-based-embedded-system-design

./: README.md
1/: a1ba1.slx  a1bb1.slx  a1bc1.slx  a1bc1_matlab.m  a1bd1.slx  a1be1.slx  ex1_b.slx  ex1_controller.slx  ex1_controller_emptytank.slx  ex1_controller_fulltank.slx  ex2a.slx  ex2a_linearized.slx  ex2b2.slx  pendulumc_2.slx  scriptpendulumc.m
2/: a2e1.slx  a2e1a.slx  a2e1b.slx  a2e1c.slx  a2e2.slx  a2e2a.slx  a2e2b.slx  lift_fig.m
3/: a3e1_1.slx  a3e1_2.slx  a3e2.slx
4/: a4 (1).lus
Project/: possible_sketch.slx
Project/elevator_code/: CMakeLists.txt  buildInfo.mat  defines.txt  elevator.c  elevator.h  elevator_data.c  elevator_private.h  elevator_types.h  main.c  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h
Project/elevator_project_code/: elevator.slx  enable_start.m  ext_buttons.m  get_state.m  get_states.m  inject.m  mk_controls.m  mk_figure.m  move_lift.m  project.slx  set_door.m  set_lights.m  set_state.m
